# Particle_Swarm_Algo

./: Final_Project_genAIuse (1).txt  LICENSE  README.md  pyproject (2).toml  pyproject.toml
.github/workflows/: tests.yml
src/: particle_swarm.py
tests/: test_ps.py
tutorials/: PS_tutorial.ipynb  Part4_tutorial_A-C.ipynb  ParticleSwarm_tutorial.ipynb
